[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/levels/AC_Level/scripts/error_zone.gd" type="Script" id=1]
[ext_resource path="res://assets/levels/AC_Level/assets/glitch.shader" type="Shader" id=2]
[ext_resource path="res://assets/levels/AC_Level/assets/fonts/LucrethiaFreeFont-zZo0.otf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/levels/AC_Level/sounds.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 50
extra_spacing_char = 3
font_data = ExtResource( 3 )

[sub_resource type="Shader" id=2]
code = "/*
	Glitch Effect Shader by Yui Kinomoto @arlez80

	MIT License
*/

shader_type canvas_item;

// 振動の強さ
uniform float shake_power = 0.03;
// 振動率
uniform float shake_rate : hint_range( 0.0, 1.0 ) = 0.2;
// 振動速度
uniform float shake_speed = 5.0;
// 振動ブロックサイズ
uniform float shake_block_size = 30.5;
// 色の分離率
uniform float shake_color_rate : hint_range( 0.0, 1.0 ) = 0.01;

float random( float seed )
{
	return fract( 543.2543 * sin( dot( vec2( seed, seed ), vec2( 3525.46, -54.3415 ) ) ) );
}

void fragment( )
{
	float enable_shift = float(
		random( trunc( TIME * shake_speed ) )
	<	shake_rate
	);

	vec2 fixed_uv = SCREEN_UV;
	fixed_uv.x += (
		random(
			( trunc( SCREEN_UV.y * shake_block_size ) / shake_block_size )
		+	TIME
		) - 0.5
	) * shake_power * enable_shift;

	vec4 pixel_color = textureLod( SCREEN_TEXTURE, fixed_uv, 0.0 );
	pixel_color.r = mix(
		pixel_color.r
	,	textureLod( SCREEN_TEXTURE, fixed_uv + vec2( shake_color_rate, 0.0 ), 0.0 ).r
	,	enable_shift
	);
	pixel_color.b = mix(
		pixel_color.b
	,	textureLod( SCREEN_TEXTURE, fixed_uv + vec2( -shake_color_rate, 0.0 ), 0.0 ).b
	,	enable_shift
	);
	COLOR = pixel_color;
}
"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/shake_power = 2.005
shader_param/shake_rate = 0.524
shader_param/shake_speed = 5.998
shader_param/shake_block_size = 30.5
shader_param/shake_color_rate = 0.0

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 2 )
shader_param/shake_power = 4.622
shader_param/shake_rate = 1.0
shader_param/shake_speed = 2.033
shader_param/shake_block_size = 1.027
shader_param/shake_color_rate = 0.493

[sub_resource type="Animation" id=5]
length = 0.51
tracks/0/type = "value"
tracks/0/path = NodePath("instructions:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 0.48 ), Vector2( 1, 0 ) ]
}

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 2 )
shader_param/shake_power = 0.03
shader_param/shake_rate = 0.2
shader_param/shake_speed = 5.0
shader_param/shake_block_size = 30.5
shader_param/shake_color_rate = 0.01

[sub_resource type="DynamicFontData" id=7]
font_path = "res://assets/levels/AC_Level/assets/fonts/LucrethiaFreeFont-zZo0.otf"

[sub_resource type="DynamicFont" id=8]
size = 30
use_filter = true
font_data = SubResource( 7 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 384, 237.685 )

[node name="error_zone" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="error_text" type="Label" parent="."]
margin_left = 885.643
margin_top = 162.119
margin_right = 1359.64
margin_bottom = 217.119
rect_scale = Vector2( 1, 0.48 )
custom_fonts/font = SubResource( 1 )
text = "error_text"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="instructions" type="Label" parent="."]
margin_left = 848.0
margin_top = 162.119
margin_right = 1202.0
margin_bottom = 217.119
rect_scale = Vector2( 1, 0.48 )
custom_fonts/font = SubResource( 1 )
text = "Destroy 999 bugs!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left_glitch" type="ColorRect" parent="."]
material = SubResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 642.853
margin_top = -40.0
margin_right = 642.853
margin_bottom = -40.0
rect_scale = Vector2( 0.356446, 9.14423 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="right_glitch" type="ColorRect" parent="."]
material = SubResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1408.0
margin_top = -40.0
margin_right = 1408.0
margin_bottom = -40.0
rect_scale = Vector2( 0.356446, 9.14423 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="center_glitch" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.0901961 )
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 600.0
margin_top = 152.0
margin_right = 600.0
margin_bottom = 152.0
rect_scale = Vector2( 21.9087, 1.15064 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/transitino_instructions = SubResource( 5 )

[node name="instructions_timeout" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="bugs_left" type="Control" parent="."]
margin_top = 163.502
margin_bottom = 163.502
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="bugs_left"]
material = SubResource( 6 )
margin_left = 872.0
margin_top = -40.5659
margin_right = 912.0
margin_bottom = -0.565887
rect_scale = Vector2( 7.65228, 0.913823 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bugs_left_text" type="Label" parent="bugs_left"]
modulate = Color( 4.05, 1, 1, 1 )
margin_left = 944.0
margin_top = -28.4551
margin_right = 1125.0
margin_bottom = 4.5449
rect_scale = Vector2( 0.895495, 0.430757 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Bugs Remaining:"

[node name="number_remaining" type="Label" parent="bugs_left"]
modulate = Color( 4.05, 1, 1, 1 )
margin_left = 1110.92
margin_top = -27.2979
margin_right = 1291.92
margin_bottom = 5.70213
rect_scale = Vector2( 0.895, 0.431 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="bugs_left"]

[node name="enemies_left" type="Area2D" parent="."]
position = Vector2( 1008, 160 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemies_left"]
position = Vector2( 32, -56 )
shape = SubResource( 9 )

[node name="sounds" parent="." instance=ExtResource( 4 )]
[connection signal="body_exited" from="enemies_left" to="." method="_on_enemies_left_body_exited"]
